@@ -1,5 +1,8 @@
 2009-03-03  Badlop  <badlop@process-one.net>
 
+	* src/ejabberd_listener.erl: When stopping a listener, don't stop
+	the listener supervisor (EJAB-874)
+
 	* src/ejabberd_listener.erl: More error detections
 
 	* src/ejabberd_config.erl: Check certfiles are readable on server
